--- a/TASK7/2_generate_molecules+char.ipynb
+++ b/TASK7/2_generate_molecules+char.ipynb
@@ -2,25 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "96213a21",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: CUDA_VISIBLE_DEVICES=0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%env CUDA_VISIBLE_DEVICES=0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6e8b8261",
    "metadata": {},
    "outputs": [],
@@ -31,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e2e77489",
    "metadata": {},
    "outputs": [],
@@ -51,21 +43,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a8b81936",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Inter-op parallelism\n",
     "torch.set_num_interop_threads(4)\n",
@@ -77,18 +58,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "1367bc5e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class GPUCONFIGS:\n",
     "    def __init__(self):\n",
@@ -102,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "859990dc",
    "metadata": {},
    "outputs": [],
@@ -117,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3b82e3d2",
    "metadata": {},
    "outputs": [],
@@ -137,20 +110,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c2da5364",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of training samples: 600116\n",
-      "Number of vocabulary: 49\n",
-      "Maximum of seqlen: 156\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gen_data = GeneratorData(pickle_data_path=dataconfigs.train_data_path,\n",
     "                         vocabulary_path=dataconfigs.vocab_data_path,\n",
@@ -163,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8533c798",
    "metadata": {},
    "outputs": [],
@@ -187,13 +150,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f2120ee7",
    "metadata": {},
    "outputs": [],
    "source": [
     "class CKPTCONFIGS:\n",
     "    def __init__(self):\n",
+    "        ################################################\n",
+    "        ## Get a pretrained model from the TASK4\n",
+    "        ################################################\n",
     "        self.input_dir = 'outputs_1_pretraining_ReBADD'\n",
     "        self.modelnames = ['zinc15+char']\n",
     "        \n",
@@ -202,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "7b7c7cb4",
    "metadata": {},
    "outputs": [],
@@ -232,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "dde5eb29",
    "metadata": {},
    "outputs": [],
@@ -242,34 +208,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "cb8ab13d",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5000/5000 [22:30<00:00,  3.70it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] 5000 SELFIES were saved in outputs_2_generate_molecules/zinc15+char/smi_after.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for modelname in ckptconfigs.modelnames:\n",
     "\n",
@@ -298,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
