--- a/TASK1/1_pretraining.ipynb
+++ b/TASK1/1_pretraining.ipynb
@@ -4,38 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reference code: JAK2 activity optimization with ReLeaSE algorithm"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: CUDA_VISIBLE_DEVICES=0\n"
+     ]
+    }
+   ],
    "source": [
     "%env CUDA_VISIBLE_DEVICES=0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,9 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "class GPUCONFIGS:\n",
     "    def __init__(self):\n",
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,18 +97,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "class DATACONFIGS:\n",
     "    def __init__(self):\n",
     "        ## input\n",
-    "        self.input_dir = os.path.join('processed_data', 'gsk3_jnk3_qed_sa')\n",
+    "        self.input_dir = 'outputs_0_preprocess_data'\n",
     "        self.train_data_path = os.path.join(self.input_dir, 'fragments_list.pkl')\n",
     "        self.vocab_data_path = os.path.join(self.input_dir, 'vocabulary.csv')\n",
-    "        ## output\n",
-    "        self.output_dir = os.path.join('outputs_1_pretraining_ReBADD', 'gsk3_jnk3_qed_sa')\n",
+    "        ## output - please manually create an output directory\n",
+    "        self.output_dir = 'outputs_1_pretraining'\n",
     "        assert os.path.exists(self.output_dir)\n",
     "\n",
     "dataconfigs = DATACONFIGS()"
@@ -117,9 +116,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training samples: 295601\n",
+      "Number of vocabulary: 34620\n",
+      "Maximum of seqlen: 34\n"
+     ]
+    }
+   ],
    "source": [
     "gen_data = GeneratorData(pickle_data_path=dataconfigs.train_data_path,\n",
     "                         vocabulary_path=dataconfigs.vocab_data_path,\n",
@@ -153,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +213,143 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training in progress...:   5%|███████▏                                                                                                                                        | 1000/20000 [20:28<6:37:17,  1.25s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[01000 (5.0%) 20m 28s], Loss_vae:4.834, Loss_rec:4.583, Loss_kld:13.933, Beta:0.050\n",
+      "selfies: [O][=C][Branch1][#Branch2][C][C][=C][C][=C][C][=C][Ring1][=Branch1][C][C][C][C][C][N][Ring1][=Branch1][C][C][=C][C][=C][Branch1][C][Cl][C][=C][Ring1][#Branch1]\n",
+      "smiles: O=C(CC1=CC=CC=C1)C2CCCCN2CC3=CC=C(Cl)C=C3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training in progress...:  10%|██████████████▍                                                                                                                                 | 2000/20000 [40:55<6:13:42,  1.25s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[02000 (10.0%) 40m 55s], Loss_vae:4.218, Loss_rec:3.834, Loss_kld:5.316, Beta:0.100\n",
+      "selfies: [C][O][C][=C][C][=C][C][=Branch1][Ring2][=C][Ring1][=Branch1][C][=Branch1][C][=O][N][Branch1][Branch1][C][C][C][O][C][=C][C][=C][N][=C][Ring1][=Branch1][N][Ring1][=Branch2]\n",
+      "smiles: COC1=CC=CC(=C1)C(=O)N(CCC2O)C3=CC=CN=C3N2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training in progress...:  15%|█████████████████████▎                                                                                                                        | 3000/20000 [1:01:24<5:59:34,  1.27s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[03000 (15.0%) 61m 24s], Loss_vae:4.087, Loss_rec:3.794, Loss_kld:2.428, Beta:0.150\n",
+      "selfies: [C][N][Branch1][C][C][C][=Branch1][C][=O][C][C][C][C][C][S][C][N][Branch1][=C][C][N][C][=Branch1][C][=O][C][C][C][C][C][Ring1][Branch1][C][C][Ring2][Ring1][Branch2]\n",
+      "smiles: C1N(C)C(=O)CCCCCSCN(CNC(=O)C2CCCC2)CC1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training in progress...:  20%|████████████████████████████▍                                                                                                                 | 4000/20000 [1:21:49<5:33:32,  1.25s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[04000 (20.0%) 81m 48s], Loss_vae:3.959, Loss_rec:3.826, Loss_kld:0.782, Beta:0.200\n",
+      "selfies: [C][C][=Branch1][C][=O][N][=C][S][C][=C][N][Ring1][#C][Branch1][Ring2][C][Ring1][=Branch2][Branch1][Branch1][C][C][O][C][C][Ring1][#Branch1][C][=C][C][=C][Branch1][C][Cl][C][=C][Ring1][#Branch1]\n",
+      "smiles: C1C(=O)N=CSC2=CN12\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training in progress...:  25%|███████████████████████████████████▌                                                                                                          | 5000/20000 [1:42:12<5:13:25,  1.25s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[05000 (25.0%) 102m 12s], Loss_vae:3.822, Loss_rec:3.766, Loss_kld:0.253, Beta:0.250\n",
+      "selfies: [N][=N][C][=C][C][N][Ring1][Ring2][C][=C][C][=C][Branch1][=Branch2][O][C][C][C][C][N][Ring1][Ring2][C][C][C][N][C][C][O][C][Ring1][#Branch2]\n",
+      "smiles: N=NC1=CCN1C=CC=C(OCC2CC3N2)CCCNCCOC3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training in progress...:  30%|██████████████████████████████████████████▌                                                                                                   | 6000/20000 [2:02:39<5:02:01,  1.29s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[06000 (30.0%) 122m 39s], Loss_vae:3.711, Loss_rec:3.682, Loss_kld:0.108, Beta:0.300\n",
+      "selfies: [C][O][C][=Branch1][C][=O][N][C][Branch1][C][C][N][C][=Branch1][C][=O][C][C][C][N][N][=C][Branch1][C][C][C][=C][C][=C][Ring1][#Branch1][C][Branch1][=N][C][=C][C][=C][Branch1][Ring1][C][#N][C][=C][Ring1][Branch2][C][Ring2][Ring1][Ring2]\n",
+      "smiles: COC(=O)NC(C)NC(=O)CC1CNN=C(C)C=CC=CC(C2=CC=C(C#N)C=C2)C1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training in progress...:  35%|█████████████████████████████████████████████████▋                                                                                            | 7000/20000 [2:23:06<4:37:31,  1.28s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[07000 (35.0%) 143m 6s], Loss_vae:3.628, Loss_rec:3.605, Loss_kld:0.073, Beta:0.350\n",
+      "selfies: [C][=C][C][Branch1][Branch1][C][C][C][C][=C][Branch1][C][C][C][=Branch1][C][=O][C][=C][Branch1][C][O][C][N][C][C][C][N][C][=C][C][=N][C][=C][C][Ring1][=Branch1]\n",
+      "smiles: C=CC(CCCC)=C(C)C(=O)C=C(O)CNCCCNC=C1C=NC=CC1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training in progress...:  40%|████████████████████████████████████████████████████████▊                                                                                     | 8000/20000 [2:43:36<4:14:17,  1.27s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[08000 (40.0%) 163m 36s], Loss_vae:3.555, Loss_rec:3.533, Loss_kld:0.060, Beta:0.400\n",
+      "selfies: [O][=C][S][N][=C][Ring1][N][C][=C][N][=C][C][Branch1][C][Br][=C][Ring1][#Branch1]\n",
+      "smiles: O=CSN=CC1=CN=CC(Br)=C1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training in progress...:  42%|███████████████████████████████████████████████████████████▊                                                                                  | 8416/20000 [2:52:06<3:53:21,  1.21s/it]"
+     ]
+    }
+   ],
    "source": [
     "losses = my_generator.fit(gen_data, n_iterations=20000,\n",
     "                          batch_size=50,\n",
