--- a/TASK1/3_checkpoints+gsk3_jnk3_qed_sa.ipynb
+++ b/TASK1/3_checkpoints+gsk3_jnk3_qed_sa.ipynb
@@ -13,17 +13,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c102fb2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "94c8b3cf",
    "metadata": {},
    "outputs": [],
@@ -109,11 +98,11 @@
     "class DATACONFIGS:\n",
     "    def __init__(self):\n",
     "        ## input\n",
-    "        self.input_dir = os.path.join('processed_data', 'gsk3_jnk3_qed_sa')\n",
+    "        self.input_dir = 'outputs_0_preprocess_data'\n",
     "        self.train_data_path = os.path.join(self.input_dir, 'fragments_list.pkl')\n",
     "        self.vocab_data_path = os.path.join(self.input_dir, 'vocabulary.csv')\n",
     "        ## output\n",
-    "        self.output_dir = os.path.join('outputs_3_checkpoints', 'gsk3_jnk3_qed_sa')\n",
+    "        self.output_dir = 'outputs_3_checkpoints'\n",
     "        assert os.path.exists(self.output_dir)\n",
     "\n",
     "dataconfigs = DATACONFIGS()"
@@ -190,9 +179,8 @@
    "source": [
     "class CKPTCONFIGS:\n",
     "    def __init__(self):\n",
-    "        self.input_dir = 'outputs_2_optimize_ReBADD'\n",
-    "        self.modelnames = ['gsk3_jnk3_qed_sa']\n",
-    "        self.numbers = ['0050', '0100', '0150', '0200', '0250', '0300', '0350', '0400', '0450', '0500']\n",
+    "        self.input_dir = 'outputs_2_optimize'\n",
+    "        self.numbers = [f'{i:04d}' for i in range(0,1001,50)]\n",
     "        \n",
     "ckptconfigs = CKPTCONFIGS()"
    ]
@@ -300,16 +288,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for modelname in ckptconfigs.modelnames:\n",
-    "    for num in ckptconfigs.numbers:\n",
-    "        \n",
-    "        filepath = os.path.join(ckptconfigs.input_dir, modelname, f'checkpoint.pth.{num}')\n",
-    "        generator.load_model(filepath)\n",
-    "        \n",
-    "        generated = SMILES_generate(gen_data, generator, reward_ft, sample_size=n_sampling, calc_sim=calc_sim)\n",
-    "        \n",
-    "        save_smiles(os.path.join(dataconfigs.output_dir, f'smi_after.csv.{num}'), generated)\n",
-    "        "
+    "for num in ckptconfigs.numbers:\n",
+    "    ## load the optimized generator\n",
+    "    filepath = os.path.join(ckptconfigs.input_dir, f'checkpoint.pth.{num}')\n",
+    "    generator.load_model(filepath)\n",
+    "\n",
+    "    ## SMILES sampling\n",
+    "    generated = SMILES_generate(gen_data, generator, reward_ft, sample_size=n_sampling, calc_sim=calc_sim)\n",
+    "\n",
+    "    ## save\n",
+    "    save_smiles(os.path.join(dataconfigs.output_dir, f'smi_after.csv.{num}'), generated)"
    ]
   },
   {
