--- a/TASK1/5_evaluate_checkpoints.ipynb
+++ b/TASK1/5_evaluate_checkpoints.ipynb
@@ -70,20 +70,18 @@
    "source": [
     "frames = []\n",
     "\n",
-    "for modelname in ['gsk3_jnk3_qed_sa']:\n",
+    "for filename in filenames:\n",
     "    \n",
-    "    for filename in filenames:\n",
-    "        \n",
-    "        filepath = os.path.join(input_dir, modelname, filename)\n",
-    "        \n",
-    "        df = pd.read_csv(filepath)\n",
-    "        \n",
-    "        df = df.loc[:,('smiles', 'gsk3b', 'jnk3', 'qed', 'sa')]\n",
-    "        df.loc[:,'model'] = modelname\n",
-    "        df.loc[:,'checkpoint'] = filename.split('.')[-1]\n",
-    "        \n",
-    "        frames.append(df)\n",
-    "        \n",
+    "    filepath = os.path.join(input_dir, filename)\n",
+    "    \n",
+    "    df = pd.read_csv(filepath)\n",
+    "    \n",
+    "    df = df.loc[:,('smiles', 'gsk3b', 'jnk3', 'qed', 'sa')]\n",
+    "    df.loc[:,'model'] = 'ReBADD-SE'\n",
+    "    df.loc[:,'checkpoint'] = filename.split('.')[-1]\n",
+    "    \n",
+    "    frames.append(df)\n",
+    "    \n",
     "        \n",
     "data = []\n",
     "\n",
@@ -101,145 +99,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "98a7224e",
-   "metadata": {},
-   "source": [
-    "## gsk3b_jnk3"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb9a06ac",
+   "id": "b40184d4-c3da-4458-bb70-b1cb7587af3b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "frames = []\n",
-    "\n",
-    "for modelname in ['gsk3_jnk3']:\n",
-    "    \n",
-    "    for filename in filenames:\n",
-    "        \n",
-    "        filepath = os.path.join(input_dir, modelname, filename)\n",
-    "        \n",
-    "        df = pd.read_csv(filepath)\n",
-    "        \n",
-    "        df = df.loc[:,('smiles', 'gsk3b', 'jnk3', 'qed', 'sa')]\n",
-    "        df.loc[:,'model'] = modelname\n",
-    "        df.loc[:,'checkpoint'] = filename.split('.')[-1]\n",
-    "        \n",
-    "        frames.append(df)\n",
-    "        \n",
-    "        \n",
-    "data = []\n",
-    "\n",
-    "for df in tqdm.tqdm(frames):\n",
-    "\n",
-    "    s_sr, s_nov, s_div = evaluate_sr_nov_div(df, referece_smiles_iter, 'gsk3b_jnk3')\n",
-    "    \n",
-    "    data.append({'SR':s_sr, 'Nov':s_nov, 'Div':s_div, 'Model':df.loc[0,'model'], 'Ckpt':df.loc[0,'checkpoint']})\n",
-    "    \n",
-    "\n",
-    "df_records = pd.DataFrame(data)\n",
-    "df_records.loc[:,'HMean'] = (df_records.loc[:,'SR'] * df_records.loc[:,'Nov'] * df_records.loc[:,'Div']) ** 0.333\n",
-    "\n",
-    "df_records"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ec249fc2",
-   "metadata": {},
-   "source": [
-    "## gsk3b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d43be51",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frames = []\n",
-    "\n",
-    "for modelname in ['gsk3']:\n",
-    "    \n",
-    "    for filename in filenames:\n",
-    "        \n",
-    "        filepath = os.path.join(input_dir, modelname, filename)\n",
-    "        \n",
-    "        df = pd.read_csv(filepath)\n",
-    "        \n",
-    "        df = df.loc[:,('smiles', 'gsk3b', 'jnk3', 'qed', 'sa')]\n",
-    "        df.loc[:,'model'] = modelname\n",
-    "        df.loc[:,'checkpoint'] = filename.split('.')[-1]\n",
-    "        \n",
-    "        frames.append(df)\n",
-    "        \n",
-    "        \n",
-    "data = []\n",
-    "\n",
-    "for df in tqdm.tqdm(frames):\n",
-    "\n",
-    "    s_sr, s_nov, s_div = evaluate_sr_nov_div(df, referece_smiles_iter, 'gsk3b')\n",
-    "    \n",
-    "    data.append({'SR':s_sr, 'Nov':s_nov, 'Div':s_div, 'Model':df.loc[0,'model'], 'Ckpt':df.loc[0,'checkpoint']})\n",
-    "    \n",
-    "\n",
-    "df_records = pd.DataFrame(data)\n",
-    "df_records.loc[:,'HMean'] = (df_records.loc[:,'SR'] * df_records.loc[:,'Nov'] * df_records.loc[:,'Div']) ** 0.333\n",
-    "\n",
-    "df_records"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "372774e4",
-   "metadata": {},
-   "source": [
-    "## jnk3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8bd579e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frames = []\n",
-    "\n",
-    "for modelname in ['jnk3']:\n",
-    "    \n",
-    "    for filename in filenames:\n",
-    "        \n",
-    "        filepath = os.path.join(input_dir, modelname, filename)\n",
-    "        \n",
-    "        df = pd.read_csv(filepath)\n",
-    "        \n",
-    "        df = df.loc[:,('smiles', 'gsk3b', 'jnk3', 'qed', 'sa')]\n",
-    "        df.loc[:,'model'] = modelname\n",
-    "        df.loc[:,'checkpoint'] = filename.split('.')[-1]\n",
-    "        \n",
-    "        frames.append(df)\n",
-    "        \n",
-    "        \n",
-    "data = []\n",
-    "\n",
-    "for df in tqdm.tqdm(frames):\n",
-    "\n",
-    "    s_sr, s_nov, s_div = evaluate_sr_nov_div(df, referece_smiles_iter, 'jnk3')\n",
-    "    \n",
-    "    data.append({'SR':s_sr, 'Nov':s_nov, 'Div':s_div, 'Model':df.loc[0,'model'], 'Ckpt':df.loc[0,'checkpoint']})\n",
-    "    \n",
-    "\n",
-    "df_records = pd.DataFrame(data)\n",
-    "df_records.loc[:,'HMean'] = (df_records.loc[:,'SR'] * df_records.loc[:,'Nov'] * df_records.loc[:,'Div']) ** 0.333\n",
-    "\n",
-    "df_records"
-   ]
+   "source": []
   }
  ],
  "metadata": {
