--- a/TASK1/6_generate_molecules.ipynb
+++ b/TASK1/6_generate_molecules.ipynb
@@ -99,7 +99,7 @@
     "class DATACONFIGS:\n",
     "    def __init__(self):\n",
     "        ## input\n",
-    "        self.input_dir = os.path.join('processed_data', 'gsk3_jnk3_qed_sa')\n",
+    "        self.input_dir = 'outputs_0_preprocess_data'\n",
     "        self.train_data_path = os.path.join(self.input_dir, 'fragments_list.pkl')\n",
     "        self.vocab_data_path = os.path.join(self.input_dir, 'vocabulary.csv')\n",
     "        ## output\n",
@@ -183,18 +183,14 @@
    "source": [
     "class CKPTCONFIGS:\n",
     "    def __init__(self):\n",
-    "        self.input_dir = 'outputs_2_optimize_ReBADD'\n",
+    "        self.input_dir = 'outputs_2_optimize'\n",
     "        \n",
     "        jobs = [\n",
-    "            #('gsk3_jnk3_qed_sa', '0150', Reward_gsk3_jnk3_qed_sa()),\n",
-    "            ('gsk3_jnk3', '0450', Reward_gsk3_jnk3()),\n",
-    "            #('gsk3', '0500', Reward_gsk3()),\n",
-    "            #('jnk3', '0450', Reward_jnk3()),\n",
+    "            ('0050', Reward_gsk3_jnk3_qed_sa()),\n",
     "        ]\n",
     "        \n",
-    "        self.modelnames = [x[0] for x in jobs]\n",
-    "        self.numbers    = [x[1] for x in jobs]\n",
-    "        self.reward_fts = [x[2] for x in jobs]\n",
+    "        self.numbers    = [x[0] for x in jobs]\n",
+    "        self.reward_fts = [x[1] for x in jobs]\n",
     "        \n",
     "ckptconfigs = CKPTCONFIGS()"
    ]
@@ -303,19 +299,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for modelname, num, reward_ft in zip(ckptconfigs.modelnames, ckptconfigs.numbers, ckptconfigs.reward_fts):\n",
+    "for num, reward_ft in zip(ckptconfigs.numbers, ckptconfigs.reward_fts):\n",
     "    \n",
-    "    filepath = os.path.join(ckptconfigs.input_dir, modelname, f'checkpoint.pth.{num}')\n",
+    "    filepath = os.path.join(ckptconfigs.input_dir, f'checkpoint.pth.{num}')\n",
     "    generator.load_model(filepath)\n",
     "        \n",
-    "    output_dir = os.path.join(dataconfigs.output_dir, modelname)\n",
-    "    if not os.path.exists(output_dir):\n",
-    "        os.mkdir(output_dir)\n",
-    "        \n",
     "    for k in range(K):\n",
-    "        \n",
     "        generated = SMILES_generate(gen_data, generator, reward_ft, sample_size=n_sampling, calc_sim=calc_sim)\n",
-    "        save_smiles(os.path.join(output_dir, f'smi_after.csv.{k}'), generated)\n",
+    "        save_smiles(os.path.join(dataconfigs.output_dir, f'smi_after.csv.{k}'), generated)\n",
     "        "
    ]
   },
