--- a/TASK3/3_checkpoints.ipynb
+++ b/TASK3/3_checkpoints.ipynb
@@ -108,11 +108,11 @@
     "class DATACONFIGS:\n",
     "    def __init__(self):\n",
     "        ## input\n",
-    "        self.input_dir = os.path.join('processed_data', 'zinc15')\n",
+    "        self.input_dir = 'outputs_0_preprocess_data'\n",
     "        self.train_data_path = os.path.join(self.input_dir, 'fragments_list.pkl')\n",
     "        self.vocab_data_path = os.path.join(self.input_dir, 'vocabulary.csv')\n",
     "        ## output\n",
-    "        self.output_dir = os.path.join('outputs_3_checkpoints', 'zinc15')\n",
+    "        self.output_dir = 'outputs_3_checkpoints'\n",
     "        assert os.path.exists(self.output_dir)\n",
     "\n",
     "dataconfigs = DATACONFIGS()"
@@ -177,9 +177,9 @@
    "source": [
     "class CKPTCONFIGS:\n",
     "    def __init__(self):\n",
-    "        self.input_dir = 'outputs_2_optimize_ReBADD'\n",
-    "        self.modelnames = ['zinc15']\n",
-    "        self.numbers = ['0050', '0100', '0150', '0200', '0250', '0300', '0350', '0400', '0450', '0500']\n",
+    "        self.input_dir = 'outputs_2_optimize'\n",
+    "        #self.numbers = ['0050', '0100', '0150', '0200', '0250', '0300', '0350', '0400', '0450', '0500']\n",
+    "        self.numbers = ['0010', '0020']\n",
     "        \n",
     "ckptconfigs = CKPTCONFIGS()"
    ]
@@ -287,16 +287,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for modelname in ckptconfigs.modelnames:\n",
-    "    for num in ckptconfigs.numbers:\n",
-    "        \n",
-    "        filepath = os.path.join(ckptconfigs.input_dir, modelname, f'checkpoint.pth.{num}')\n",
-    "        generator.load_model(filepath)\n",
-    "        \n",
-    "        generated = SMILES_generate(gen_data, generator, reward_ft, sample_size=n_sampling)\n",
-    "        \n",
-    "        save_smiles(os.path.join(dataconfigs.output_dir, f'smi_after.csv.{num}'), generated)\n",
-    "        "
+    "for num in ckptconfigs.numbers:\n",
+    "    ## laod a checkpoint\n",
+    "    filepath = os.path.join(ckptconfigs.input_dir, f'checkpoint.pth.{num}')\n",
+    "    generator.load_model(filepath)\n",
+    "\n",
+    "    ## SMILES sampling\n",
+    "    generated = SMILES_generate(gen_data, generator, reward_ft, sample_size=n_sampling)\n",
+    "\n",
+    "    ## save\n",
+    "    save_smiles(os.path.join(dataconfigs.output_dir, f'smi_after.csv.{num}'), generated)\n",
+    "    "
    ]
   },
   {
