--- a/TASK3/5_evaluate_checkpoints.ipynb
+++ b/TASK3/5_evaluate_checkpoints.ipynb
@@ -51,11 +51,6 @@
    "outputs": [],
    "source": [
     "input_dir = 'outputs_4_calculate_properties'\n",
-    "\n",
-    "modelnames = [\n",
-    "    'zinc15',\n",
-    "]\n",
-    "\n",
     "filenames = [f'smi_after.csv.{num:04d}' for num in range(50,550,50)]"
    ]
   },
@@ -67,20 +62,17 @@
    "outputs": [],
    "source": [
     "frames = []\n",
-    "\n",
-    "for modelname in modelnames:\n",
     "    \n",
-    "    for filename in filenames:\n",
-    "        \n",
-    "        filepath = os.path.join(input_dir, modelname, filename)\n",
-    "        \n",
-    "        df = pd.read_csv(filepath)\n",
-    "        \n",
-    "        df = df.loc[:,('smiles', 'bcl2', 'bclxl', 'bclw')]\n",
-    "        df.loc[:,'model'] = modelname\n",
-    "        df.loc[:,'checkpoint'] = filename.split('.')[-1]\n",
-    "        \n",
-    "        frames.append(df)"
+    "for filename in filenames:\n",
+    "    \n",
+    "    filepath = os.path.join(input_dir, filename)\n",
+    "    df = pd.read_csv(filepath)\n",
+    "    \n",
+    "    df = df.loc[:,('smiles', 'bcl2', 'bclxl', 'bclw')]\n",
+    "    df.loc[:,'model'] = 'ReBADD-SE'\n",
+    "    df.loc[:,'checkpoint'] = filename.split('.')[-1]\n",
+    "    \n",
+    "    frames.append(df)"
    ]
   },
   {
