--- a/TASK3/6_generate_molecules.ipynb
+++ b/TASK3/6_generate_molecules.ipynb
@@ -108,11 +108,11 @@
     "class DATACONFIGS:\n",
     "    def __init__(self):\n",
     "        ## input\n",
-    "        self.input_dir = os.path.join('processed_data', 'zinc15')\n",
+    "        self.input_dir = 'outputs_0_preprocess_data'\n",
     "        self.train_data_path = os.path.join(self.input_dir, 'fragments_list.pkl')\n",
     "        self.vocab_data_path = os.path.join(self.input_dir, 'vocabulary.csv')\n",
     "        ## output\n",
-    "        self.output_dir = os.path.join('outputs_6_generate_molecules', 'frag+reinforce+scst+offpolicy')\n",
+    "        self.output_dir = 'outputs_6_generate_molecules'\n",
     "        assert os.path.exists(self.output_dir)\n",
     "\n",
     "dataconfigs = DATACONFIGS()"
@@ -177,9 +177,8 @@
    "source": [
     "class CKPTCONFIGS:\n",
     "    def __init__(self):\n",
-    "        self.input_dir = 'outputs_2_optimize_ReBADD'\n",
-    "        self.modelnames = ['zinc15']\n",
-    "        self.numbers = ['0500']\n",
+    "        self.input_dir = 'outputs_2_optimize'\n",
+    "        self.numbers = ['0010'] # manual setting\n",
     "        \n",
     "ckptconfigs = CKPTCONFIGS()"
    ]
@@ -288,17 +287,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for modelname in ckptconfigs.modelnames:\n",
-    "    for num in ckptconfigs.numbers:\n",
-    "        \n",
-    "        filepath = os.path.join(ckptconfigs.input_dir, modelname, f'checkpoint.pth.{num}')\n",
-    "        generator.load_model(filepath)\n",
-    "        \n",
-    "        for k in range(K):\n",
-    "            generated = SMILES_generate(gen_data, generator, reward_ft, sample_size=n_sampling)\n",
+    "for num in ckptconfigs.numbers:\n",
+    "    \n",
+    "    filepath = os.path.join(ckptconfigs.input_dir, f'checkpoint.pth.{num}')\n",
+    "    generator.load_model(filepath)\n",
+    "    \n",
+    "    for k in range(K):\n",
+    "        generated = SMILES_generate(gen_data, generator, reward_ft, sample_size=n_sampling)\n",
     "\n",
-    "            save_smiles(os.path.join(dataconfigs.output_dir, f'smi_after.csv.{k}'), generated)\n",
-    "        "
+    "        save_smiles(os.path.join(dataconfigs.output_dir, f'smi_after.csv.{k}'), generated)\n",
+    "    "
    ]
   },
   {
