--- a/TASK3/4_calculate_properties.ipynb
+++ b/TASK3/4_calculate_properties.ipynb
@@ -13,17 +13,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2689f9d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b50f3b0f",
    "metadata": {},
    "outputs": [],
@@ -82,7 +71,8 @@
     "    sys.path = [REBADD_LIB_PATH] + sys.path\n",
     "\n",
     "from rebadd.bindutils import BAScorerBCL2, BAScorerBCLXL, BAScorerBCLW\n",
-    "from rebadd.chemutils import SAScorer, RAScorer, calc_chem_properties # smi -> (mw, clogp, tpsa, qed)"
+    "from rebadd.chemutils import SAScorer, RAScorer\n",
+    "from rebadd.chemutils import calc_chem_properties # smi -> (mw, clogp, tpsa, qed)"
    ]
   },
   {
@@ -157,12 +147,7 @@
     "class CKPTCONFIGS:\n",
     "    def __init__(self):\n",
     "        \n",
-    "        self.input_dir = 'outputs_3_checkpoints'\n",
-    "        \n",
-    "        self.modelnames = [\n",
-    "            'zinc15',\n",
-    "        ]\n",
-    "                \n",
+    "        self.input_dir = 'outputs_3_checkpoints'                \n",
     "        self.filenames = [f'smi_after.csv.{num:04d}' for num in range(50,550,50)]\n",
     "        \n",
     "ckptconfigs = CKPTCONFIGS()"
@@ -191,30 +176,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for modelname in ckptconfigs.modelnames:\n",
+    "for filename in ckptconfigs.filenames:\n",
     "    \n",
-    "    input_dir = os.path.join(ckptconfigs.input_dir, modelname)\n",
-    "    output_dir = os.path.join(outputconfigs.output_dir, modelname)\n",
-    "    if not os.path.exists(output_dir):\n",
-    "        os.mkdir(output_dir)\n",
+    "    filepath = os.path.join(ckptconfigs.input_dir, filename)\n",
     "    \n",
-    "    for filename in ckptconfigs.filenames:\n",
+    "    df = pd.read_csv(filepath, header=None, skip_blank_lines=True)\n",
+    "    gen_smiles = df.iloc[:,0].values.tolist()\n",
+    "    \n",
+    "    print(len(gen_smiles))\n",
+    "    \n",
+    "    data = []\n",
+    "    for smi in tqdm.tqdm(gen_smiles):\n",
+    "        data.append(calc_properties(smi))\n",
     "        \n",
-    "        filepath = os.path.join(input_dir, filename)\n",
-    "        \n",
-    "        df = pd.read_csv(filepath, header=None, skip_blank_lines=True)\n",
-    "        gen_smiles = df.iloc[:,0].values.tolist()\n",
-    "        \n",
-    "        print(len(gen_smiles))\n",
-    "        \n",
-    "        data = []\n",
-    "        for smi in tqdm.tqdm(gen_smiles):\n",
-    "            data.append(calc_properties(smi))\n",
-    "            \n",
-    "        df = pd.DataFrame(data)\n",
-    "        \n",
-    "        output_filepath = os.path.join(output_dir, filename)\n",
-    "        df.to_csv(output_filepath, index=False)"
+    "    df = pd.DataFrame(data)\n",
+    "    \n",
+    "    output_filepath = os.path.join(outputconfigs.output_dir, filename)\n",
+    "    df.to_csv(output_filepath, index=False)"
    ]
   },
   {
